--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portafolio Luis Gabriel</title>
     <link> rel="stylesheet" href="all.css"
-    <link> rel="stylesheet" href="styles.css"
+    <link> rel="stylesheet" href="style.css"
 </head>
 <body>
     Hola mundo
@@ -22,7 +22,6 @@
            <div>DOS</div> 
            <div>TRES</div> 
         </div>
-    </div>
-    
+    </div>   
 </body>
 </html>
